--- a/ChitChat.Frontend/src/styles/index.css
+++ b/ChitChat.Frontend/src/styles/index.css
@@ -25,11 +25,12 @@ button:hover {
     font-size: clamp(3rem, 1.6667rem + 10.6667vw, 5rem);
 }
 
-#user-list {
+#user-list,
+#chat-list {
     position: relative;
 }
-#user-list:not(:has(.user-item))::after {
-    content: 'No users found';
+#user-list:not(:has(.user-item))::after,
+#chat-list:not(:has(.chat-item))::after {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -40,19 +41,27 @@ button:hover {
     color: #ccc;
     transform: translateY(-4rem);
 }
-
-#user-list .user-item {
+#user-list:not(:has(.user-item))::after {
+    content: 'No users found';
+}
+#chat-list:not(:has(.chat-item))::after {
+    content: 'No chats found';
+}
+#user-list .user-item,
+#chat-list .chat-item {
     display: flex;
     padding: 1rem;
     flex-direction: column;
     justify-content: center;
     cursor: pointer;
 }
-#user-list .user-item.active {
+#user-list .user-item.active,
+#chat-list .chat-item.active {
     outline: 1px solid;
     outline-offset: -5px;
 }
-#user-list .user-item:hover {
+#user-list .user-item:hover,
+#chat-list .chat-item:hover {
     background: #ccc;
 }
 
@@ -69,5 +78,5 @@ button:hover {
     align-items: center;
     font-size: 1rem;
     color: #ccc;
-    transform: translateY(-2rem);
+    transform: translateY(-4rem);
 }
